--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure itaque cumque voluptatem officiis sapiente non excepturi, error fuga sint quos quaerat aut hic esse molestiae fugiat reiciendis quo nihil dolorum?
     </p>
+
+    <a href="about.html">To About</a>
 </body>
 </html>
